--- a/catalan.dtx
+++ b/catalan.dtx
@@ -902,7 +902,7 @@
 \fi
 %    \end{macrocode}
 %
-%    As math mode desn't have accented characters, we need to specifically
+%    As math mode doesn't have accented characters, we need to specifically
 %    define and add the accented characters using unicode.
 %
 %    \begin{macrocode}
@@ -947,7 +947,7 @@
 % \begin{macro}{\accentedoperators}
 % \begin{macro}{\unaccentedoperators}
 %    The macro |\accentedoperators| enables the corresponding
-%    accented operators. This macro is active by default.
+%    accented operators, active by default.
 %    The macro |\unaccentedoperators| is used
 %    to cancel the acctions of |\accentedoperators|.
 %    \begin{macrocode}
@@ -969,8 +969,7 @@
 % \begin{macro}{\spacedoperators}
 % \begin{macro}{\unspacedoperators}
 %    The macro |\spacedoperators| creates a space in some math 
-%    operators like |\limsup| and |\liminf|. This macro is 
-%    active by default.
+%    operators like |\limsup| and |\liminf|, active by default.
 %    The macro |\unspacedoperators| is used to cancel the actions
 %    of |\spacedoperators|.
 %    \begin{macrocode}
