--- a/catalan.dtx
+++ b/catalan.dtx
@@ -43,11 +43,10 @@
 %%           by Goncal Badenes <badenes (at) imec.be>
 %%              Johannes Braams, TeXniek
 %% Copyright (C) 2020
-%%           by Miquel Ortega <xxx>
+%%           by Miquel Ortega <miquel (dot) ortega9 (at) gmail (dot) com>
 %%              Orestes Mas <orestes (dot) mas (at) upc (dot) edu>
-%%              Johannes Braams, TeXniek
 %
-%% Please report errors to: Miquel Ortega babel at braams.cistron.nl
+%% Please report errors to: Miquel Ortega <miquel (dot) ortega9 (at) gmail (dot) com>
 %%
 %    This file is part of the babel system, it provides the source
 %    code for the Catalan language definition file.
@@ -83,7 +82,7 @@
 
 
 \begin{document}
-  \title{Estil \textsf{catalan} per al sistema Babel}
+  \title{Estil \textsf{catalan} per al sistema Babel\footnote{Aquest paquet és actualment a la versió 3.0 amb data del primer d'octubre de 2020. La present còpia del manual fou generada el~\today.}}
   \author{Gonçal Badenes \and Miquel Ortega \and Orestes Mas}
   \date{\today}
   \maketitle
@@ -114,7 +113,7 @@
 %    \cs{atcatcode} right to the beginning.}
 % \changes{catalan-2.2k}{1999/05/05}{A wrong \cs{changes} entry made
 %    typesetting impossible}
-% \changes{catalan-3.0}{2020/09/01}{New maintainers}
+% \changes{catalan-3.0}{2020/09/01}{Start rework funded by IEC. New maintainers}
 %
 %  \section{The Catalan language}
 %
@@ -274,7 +273,7 @@
 %  \begin{macro}{\ifcat@unicode}
 %    We define a new if that is set to true if we are working with a
 %    unicode capable engine.
-% \changes{catalan-3.0}{2020/10/4}{Added a new `if’ \cs{cat@unicode} to detect
+% \changes{catalan-3.0}{2020/10/4}{Added a new ``if'' \cs{cat@unicode} to detect
 %    unicode engines}
 %    \begin{macrocode}
 \@ifundefined{Umathcode}
@@ -317,9 +316,7 @@
 %
 %  \begin{macro}{\captionscatalan}
 %    The macro |\captionscatalan| defines all strings used in the four standard
-%    documentclasses provided with \LaTeX. We set it using Babel 3.9 syntax,
-%    which allows different definitions according to the encoding in use.
-
+%    documentclasses provided with \LaTeX.
 % \changes{catalan-1.1}{1993/07/11}{\cs{headpagename} should be
 %    \cs{pagename}}
 % \changes{catalan-2.0}{1993/07/11}{Added some names}
@@ -331,11 +328,17 @@
 % \changes{catalan-2.2m}{2000/09/19}{Added \cs{glossaryname}}
 % \changes{catalan-2.2p}{2003/11/17}{Inserted translation for
 %    Glossary}
-% \changes{catalan-3.0}{2020/09/23}{Use Babel 3.9 syntax for captions and dates} %TODO:
-% %quit if Babel is < 3.9?
+%  \begin{macro}{\StartBabelCommands}
+%    Babel changed the system it used to localize captions from its version 3.9 on.
+%    The change is made to allow defining strings in several encodings, as xelatex/luatex do.
+%    So we changed the \captionscatalan macro to the new one.
+%    WARNING: Users of Babel prior to version 3.9 should update their \TeX\ distribution
+%    to a newer one.
+% \changes{catalan-3.0}{2020/09/23}{Use Babel 3.9 syntax for captions and dates} 
+%TODO: quit if Babel is < 3.9?
 %    \begin{macrocode}
 \StartBabelCommands*{catalan}{captions}
-      [unicode, fontenc=TU EU1 EU2, charset=utf8]
+  [unicode, fontenc=TU EU1 EU2, charset=utf8]
   \SetString{\prefacename}{Pròleg}%
   \SetString{\refname}{Referències}%
   \SetString{\abstractname}{Resum}%
@@ -382,6 +385,7 @@
   \SetString{\glossaryname}{Glossari}%
 \EndBabelCommands
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 %  \begin{macro}{\datecatalan}
@@ -431,7 +435,7 @@
 %    non-zero lower case code; when we do that \TeX\ will find more
 %    breakpoints in words that contain this character in its r\^ole as
 %    apostrophe. 
-% \changes{catalan-3.0}{2020/10/4}{Use bbl@save@variable to store the
+% \changes{catalan-3.0}{2020/10/4}{Use babel@savevariable to store the
 %    lowercase code of the apostrophe, and set the unicode apostrophe
 %    to have a non-zero lower case code too. Code taken essentially
 %    from babel-french}
@@ -847,7 +851,7 @@
 %   in math mode. We use |\dotlessi| to do so and add the accents to
 %   the corresponding operators\footnote{This implementation has been
 %   borrowed from spanish.dtx}.
-% \changes{catalan-3.0}{2020/11/10}{Added accented operatos}
+% \changes{catalan-3.0}{2020/11/10}{Added accented math operators}
 %
 %    \begin{macrocode}
 \addto\mathcatalan{\cat@sDRC\dotlessi{\cat@dotlessi}}
