Added catalan strings used by the 'appendix' package

--- a/catalan.dtx
+++ b/catalan.dtx
@@ -134,27 +134,29 @@
 %    \begin{table}[htb]
 %      \centering
 %      \begin{tabular}{ll}%
-%        |\prefacename|    & Pr\`oleg\\%
-%        |\refname|        & Refer\`encies\\%
-%        |\abstractname|   & Resum\\%
-%        |\bibname|        & Bibliografia\\%
-%        |\chaptername|    & Cap\'{\i}tol\\%
-%        |\appendixname|   & Ap\`endix\\%
-%        |\contentsname|   & \'Index\\%
-%        |\listfigurename| & \'Index de figures\\%
-%        |\listtablename|  & \'Index de taules\\%
-%        |\indexname|      & \'Index alfab\`etic\\%
-%        |\figurename|     & Figura\\%
-%        |\tablename|      & Taula\\%
-%        |\partname|       & Part\\%
-%        |\enclname|       & Adjunt\\%
-%        |\ccname|         & C\`opies a\\%
-%        |\headtoname|     & A\\%
-%        |\pagename|       & P\`agina\\%
-%        |\seename|        & Vegeu\\%
-%        |\alsoname|       & Vegeu tamb\'e\\%
-%        |\proofname|      & Demostraci\'o\\%
-%        |\glossaryname|   & Glossari\\%
+%        |\prefacename|       & Pr\`oleg\\%
+%        |\refname|           & Refer\`encies\\%
+%        |\abstractname|      & Resum\\%
+%        |\bibname|           & Bibliografia\\%
+%        |\chaptername|       & Cap\'{\i}tol\\%
+%        |\appendixname|      & Ap\`endix\\%
+%        |\appendixpagename|  & Ap\`endixs\\%
+%        |\appendixtocname|  & Ap\`endixs\\%
+%        |\contentsname|      & \'Index\\%
+%        |\listfigurename|    & \'Index de figures\\%
+%        |\listtablename|     & \'Index de taules\\%
+%        |\indexname|         & \'Index alfab\`etic\\%
+%        |\figurename|        & Figura\\%
+%        |\tablename|         & Taula\\%
+%        |\partname|          & Part\\%
+%        |\enclname|          & Adjunt\\%
+%        |\ccname|            & C\`opies a\\%
+%        |\headtoname|     	  & A\\%
+%        |\pagename|          & P\`agina\\%
+%        |\seename|           & Vegeu\\%
+%        |\alsoname|          & Vegeu tamb\'e\\%
+%        |\proofname|         & Demostraci\'o\\%
+%        |\glossaryname|      & Glossari\\%
 %      \end{tabular}
 %      \caption{Caption names as defined in \babelcat{}}%
 %      \label{tab:catalan-caption-names}
@@ -345,6 +347,8 @@
   \SetString{\bibname}{Bibliografia}%
   \SetString{\chaptername}{Capítol}%
   \SetString{\appendixname}{Apèndix}%
+  \SetString{\appendixpagename}{Apèndixs}%
+  \SetString{\appendixtocname}{Apèndixs}%
   \SetString{\contentsname}{Índex}%
   \SetString{\listfigurename}{Índex de figures}%
   \SetString{\listtablename}{Índex de taules}%
@@ -368,6 +372,8 @@
   \SetString{\bibname}{Bibliografia}%
   \SetString{\chaptername}{Cap\'{\i}tol}%
   \SetString{\appendixname}{Ap\`endix}%
+  \SetString{\appendixpagename}{Ap\`endixs}%
+  \SetString{\appendixtocname}{Ap\`endixs}%
   \SetString{\contentsname}{\'Index}%
   \SetString{\listfigurename}{\'Index de figures}%
   \SetString{\listtablename}{\'Index de taules}%
