--- a/catalan.dtx
+++ b/catalan.dtx
@@ -113,7 +113,10 @@
 %    \cs{atcatcode} right to the beginning.}
 % \changes{catalan-2.2k}{1999/05/05}{A wrong \cs{changes} entry made
 %    typesetting impossible}
-% \changes{catalan-3.0}{2020/09/01}{Start rework funded by IEC. New maintainers}
+% \changes{catalan-3.0}{2020/09/01}{New maintainers. Start rework funded by IEC.}
+% \changes{catalan-3.0}{2020/09/01}{Created git repo to host collaborative development}
+% \changes{catalan-3.0}{2020/10/13}{Add regression tests using \texttt{l3build}}
+% \changes{catalan-3.0}{2020/12/26}{Added catalan strings used by the 'appendix' package}
 %
 %  \section{The Catalan language}
 %
@@ -330,6 +333,7 @@
 % \changes{catalan-2.2m}{2000/09/19}{Added \cs{glossaryname}}
 % \changes{catalan-2.2p}{2003/11/17}{Inserted translation for
 %    Glossary}
+% \changes{catalan-3.0}{2020/12/26}{Added catalan strings used by the \texttt{appendix} package}
 %  \begin{macro}{\StartBabelCommands}
 %    Babel changed the system it used to localize captions from its version 3.9 on.
 %    The change is made to allow defining strings in several encodings, as xelatex/luatex do.
