Remove unnecessary code

--- a/catalan.dtx
+++ b/catalan.dtx
@@ -287,14 +287,8 @@
 %    \end{macrocode}
 %  \end{macro}
 %
-%    Package options for catalan. To avoid error messages dummy
-%    options are created on the fly when neccessary.
-%
-%    \begin{macrocode}
-%    \end{macrocode}
-%
-%    Instead of joining all the extras directly in |\extrascatalan|,
-%    we subdivide them in three further groups: text, math and shorthands.
+%    All extras related to math are concentrated in the macro mathcatalan. The
+%    rest are simply added to extrascatalan.
 %
 %    \begin{macrocode}
 \def\extrascatalan{%
